# spot-loco

./: CMakeLists.txt  setup.py
raisim_gym/algo/ppo_torch/: __init__.py  memory.py  module.py  ppo.py  rnnppo.py  storage.py
raisim_gym/env/: RaisimGymEnv.hpp  RaisimGymVecEnv.py  RewardLogger.hpp  SlidingMemory.hpp  VectorizedEnvironment.hpp  debug_app.cpp  gaitlogger.cpp  jointSpeedTorqueLogger.cpp  raisim_gym.cpp
raisim_gym/env/env/Spot/: Environment.hpp  __init__.py  visSetupCallback.hpp
raisim_gym/env/env/Spot/rsc/: default_cfg.yaml
raisim_gym/env/env/Spot/visualizer/: OgreVis.cpp  OgreVis.hpp  guiState.hpp  raisimBasicImguiPanel.hpp  raisimKeyboardCallback.hpp  visSetupCallback.hpp
ros/champ/champ_base/: .gitignore  CMakeLists.txt  package.xml
ros/champ/champ_base/config/rl_controller/: loco_controller.pt  rl_controller_params.yaml
ros/champ/champ_base/include/: libtorch.hpp  quadruped_controller.h
ros/champ/champ_base/scripts/: install-libtorch.sh
ros/champ/champ_base/src/: quadruped_controller.cpp  quadruped_controller_node.cpp
ros/champ/robots/configs/spot_config/config/ros_control/: ros_control.yaml
ros/champ/robots/configs/spot_config/launch/: bringup.launch  spawn_robot.launch
ros/champ/robots/configs/spot_config/worlds/: default.world
scripts/: spot.py
trained_params/: actor_architecture.pth  actor_distribution.pth  critic.pth
